Reportes escrutinios: agregar total recaudacion en tabla, detalle y CSV

--- a/public/index.html
+++ b/public/index.html
@@ -3008,6 +3008,7 @@
                       <th>Juego</th>
                       <th>Total Ganadores</th>
                       <th>Total Premios</th>
+                      <th>Total Recaudación</th>
                       <th>Usuario</th>
                       <th>Fecha Sorteo (Ref.)</th>
                       <th>Acciones</th>
