--- a/public/index.html
+++ b/public/index.html
@@ -2587,6 +2587,7 @@
             <i class="fas fa-info-circle"></i> <strong>Detección automática:</strong>
             El sistema detecta el tipo de juego desde la columna "Juego" del Excel.
             Soporta: <span class="badge badge-primary">Quiniela</span>
+            <span class="badge badge-primary">Quiniela Ya</span>
             <span class="badge badge-success">Quini 6</span>
             <span class="badge badge-warning">Brinco</span>
             <span class="badge badge-info">Loto 5 Plus</span>
@@ -2607,6 +2608,7 @@
               <select id="programacion-filtro-juego" class="form-control">
                 <option value="" selected>Todos los juegos</option>
                 <option value="Quiniela">Quiniela</option>
+                <option value="Quiniela Ya">Quiniela Ya</option>
                 <option value="Quini 6">Quini 6</option>
                 <option value="Brinco">Brinco</option>
                 <option value="Loto 5 Plus">Loto 5 Plus</option>
@@ -3494,7 +3496,7 @@
   <script src="js/config.js?v=20260206g"></script>
   <script src="js/api.js?v=20260227b"></script>
   <script src="js/ocr-extractos.js?v=20260227a"></script>
-  <script src="js/app.js?v=20260228b"></script>
+  <script src="js/app.js?v=20260228c"></script>
 </body>
 
 </html>
